peac_dev/force-app/main/default/objects/Misc_Coding_Matrix__mdt/Misc_Coding_Matrix__mdt.object-meta.xml
<CustomObject>
    <description>SAL-5299</description>
    <label>Misc Coding Matrix</label>
    <pluralLabel>Misc Codings Matrix</pluralLabel>
</CustomObject>