peac_dev/force-app/main/default/objects/Misc_Coding_Matrix__mdt/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>