peac_dev/force-app/main/default/objects/Misc_Coding_Matrix__mdt/fields/Value_To_Update__c.field-meta.xml
<CustomField>
    <fullName>Value_To_Update__c</fullName>
    <label>Value To Update</label>
    <length>80</length>
    <type>Text</type>
</CustomField>