peac_dev/force-app/main/default/objects/Misc_Coding_Matrix__mdt/listViews/more_fields.listView-meta.xml
<ListView>
    <fullName>more_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Object_Name__c</columns>
    <columns>GL_Code__c</columns>
    <columns>Field_To_Update__c</columns>
    <columns>Value_To_Update__c</columns>
    <filterScope>Everything</filterScope>
    <label>more fields</label>
</ListView>